--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="mapbox_gl_example"
         android:icon="@mipmap/ic_launcher">
-        <meta-data android:name="com.mapbox.token" android:value="PLACE_MAPBOX_TOKEN_HERE" />
+        <meta-data android:name="com.mapbox.token" android:value="@string/mapbox_access_token" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
