--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ flutter:
   # adding or updating assets for this project.
   plugin:
     androidPackage: com.mapbox.mapboxgl
-    pluginClass: MapboxGlPlugin
+    pluginClass: MapboxMapsPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
