Add location, styleString(URL/JSON), onMapClick, queryRenderedFeatures

--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -1,2 +1,2 @@
-connection.project.dir=../example/android
+connection.project.dir=../../flutter-mapbox-gl-last Yoav code bef tobrun/example/android
 eclipse.preferences.version=1
