--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,7 +23,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 16
@@ -37,6 +37,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     dependencies {
-        implementation "com.mapbox.mapboxsdk:mapbox-android-sdk:7.1.1"
+        implementation "com.mapbox.mapboxsdk:mapbox-android-sdk:7.1.2"
+        implementation "com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v7:0.5.0"
+    }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 }
