add userTrackingMode for iOS (#65)

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>MGLMapboxAccessToken</key>
 	<string>YOUR_TOKEN_HERE</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
