--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,6 +40,11 @@ flutter:
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
+  assets:
+    - assets/symbols/custom-icon.png
+    - assets/symbols/2.0x/custom-icon.png
+    - assets/symbols/3.0x/custom-icon.png
+
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
 
