Update pubspec.yaml to include supported platforms (#148)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,12 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.mapbox.mapboxgl
-    pluginClass: MapboxMapsPlugin
+    platforms:
+      android:
+        package: com.mapbox.mapboxgl
+        pluginClass: MapboxMapsPlugin
+      ios:
+        pluginClass: MapboxMapsPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
