Implement setTelemetryEnabled for Android (Fix #143) (#144)
* Add setTelemetryEnabled support for Android

* Ignore setTelemetryEnabled on iOS

* Update MapboxMapController.swift

Fix formatting on iOS

* Implement matchMapLanguageWithDeviceDefault and setMapLanguage on Android

Implement matchMapLanguageWithDeviceDefault and setMapLanguage on Android through the Mapbox Localization Plugin for Android
On iOS these function calls are ignored

* Fix android implementation

* Revert "Merge branch 'all_features' into telemetry"

This reverts commit 078eefd5f93d75de8193265c5e9d5dd207a4b225, reversing
changes made to 5e7fd88ec22c45fc00e27131d48198e9c3b94e52.

* Add example code for setTelemetryEnabled

* Setting the required MGLMapboxMetricsEnabledSettingShownInApp property in the plist.

* Implemented "map#getTelemetryEnabled" and "map#setTelemertyEnabled".

* Added getTelemetryEnabled to controller.

* Read whether telemetry has been enabled when opening the map ui page.

* Implement getTelemetryEnabled on Android

Co-authored-by: Timothy Sealy <TimothySealy@users.noreply.github.com>
Co-authored-by: Tobrun <tobrun.van.nuland@gmail.com>

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,6 +45,8 @@
 	<true/>
 	<key>MGLMapboxAccessToken</key>
 	<string>YOUR_TOKEN_HERE</string>
+	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
+	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSLocationAlwaysUsageDescription</key>
