Implement setting map language on Android (Fix #145) (#146)
* Implement matchMapLanguageWithDeviceDefault and setMapLanguage on Android

Implement matchMapLanguageWithDeviceDefault and setMapLanguage on Android through the Mapbox Localization Plugin for Android
On iOS these function calls are ignored

* Fix android implementation

* Implemented language change on iOS.

Co-authored-by: Timothy Sealy <TimothySealy@users.noreply.github.com>
Co-authored-by: Tobrun <tobrun.van.nuland@gmail.com>

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,6 +39,7 @@ android {
     dependencies {
         implementation "com.mapbox.mapboxsdk:mapbox-android-sdk:8.5.0"
         implementation "com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v8:0.7.0"
+        implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-localization-v8:0.11.0'		
     }
     compileOptions {
         sourceCompatibility 1.8
