--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,11 @@ homepage: https://github.com/tobrun/flutter-mapbox-gl
 dependencies:
   flutter:
     sdk: flutter
+  mapbox_gl_platform_interface:
+    path: ./mapbox_gl_platform_interface
+  mapbox_gl_web:
+    path: ./mapbox_gl_web
+    
 flutter:
   plugin:
     platforms:
@@ -14,6 +19,8 @@ flutter:
         pluginClass: MapboxMapsPlugin
       ios:
         pluginClass: MapboxMapsPlugin
+      web:
+        default_package: mapbox_gl_web
         
 environment:
   sdk: ">=2.1.0 <3.0.0"
