[release] release v0.7.0 of flutter plugin for mapbox maps (#308)

--- a/mapbox_gl_web/pubspec.yaml
+++ b/mapbox_gl_web/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mapbox_gl_web
-description: Web platform implementation of mapbox_gl_web
-version: 0.1.0
-homepage: https://github.com/tobrun/flutter-mapbox-gl/mapbox_gl_web
+description: Web platform implementation of mapbox_gl
+version: 0.7.0
+homepage: https://github.com/tobrun/flutter-mapbox-gl
 
 flutter:
   plugin:
@@ -16,8 +16,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   meta: ^1.1.7
-  mapbox_gl_platform_interface: 
-    path: ../mapbox_gl_platform_interface
+  mapbox_gl_platform_interface: ^0.7.0
   mapbox_gl_dart: ^0.1.5
   image: ^2.1.12
 
