--- a/mapbox_gl_platform_interface/pubspec.yaml
+++ b/mapbox_gl_platform_interface/pubspec.yaml
@@ -1,6 +1,7 @@
 name: mapbox_gl_platform_interface
 description: A common platform interface for the mapbox_gl plugin.
-version: 0.1.0
+version: 0.7.0
+homepage: https://github.com/tobrun/flutter-mapbox-gl
 
 dependencies:
   flutter:
