Add line#getGeometry and symbol#getGeometry (#281)
CI: run flutter analyze in example directory

Co-authored-by: Timothy Sealy <timothy.sealy@gmail.com>

--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: subosito/flutter-action@v1
     - run: flutter pub get
     - name: Lint analysis
-      run: flutter analyze
+      run: cd example && flutter analyze
 
   build-android:
     name: "Build Android apk"
