--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,12 @@ dependencies:
   location: ^2.5.3
   http:
 
+dependency_overrides:
+  mapbox_gl_platform_interface:
+    path: ../mapbox_gl_platform_interface
+  mapbox_gl_web:
+    path: ../mapbox_gl_web
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
