Set the map style to a local asset in iOS (#306)
* Try to load a style from a local asset if styleString does not start with http(s):// or mapbox://

* Add style.json asset for testing.

* Update map_ui so that we can toggle through different map styles.

* Added similar implementation on Android for parity.

* Added some documentation on the usage of map styles.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
     - assets/symbols/custom-icon.png
     - assets/symbols/2.0x/custom-icon.png
     - assets/symbols/3.0x/custom-icon.png
+    - assets/style.json
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
