--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,15 @@ homepage: https://github.com/tobrun/flutter-mapbox-gl
 dependencies:
   flutter:
     sdk: flutter
-  mapbox_gl_platform_interface: 
-    path: mapbox_gl_platform_interface
-  mapbox_gl_web: 
-    path: mapbox_gl_web
-    
+  mapbox_gl_platform_interface:
+    git:
+      url: https://github.com/tobrun/flutter-mapbox-gl.git
+      path: mapbox_gl_platform_interface
+  mapbox_gl_web:
+    git:
+      url: https://github.com/tobrun/flutter-mapbox-gl.git
+      path: mapbox_gl_web
+
 flutter:
   plugin:
     platforms:
