--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -47,3 +47,20 @@ jobs:
         run: |
           cd ./example
           flutter build ios --release --no-codesign
+          
+  build-web:
+    name: "Build web"
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: beta
+    - run: flutter config --enable-web
+    - run: flutter pub get
+    - name: Build web
+      run: cd example && flutter build web
