Allow setting access token in Flutter (#321)

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -43,13 +43,11 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
-	<key>MGLMapboxAccessToken</key>
-	<string>YOUR_TOKEN_HERE</string>
 	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Shows your location on the map and helps improve the map</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
+	<string>Shows your location on the map and helps improve the map</string>
 </dict>
 </plist>
