--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -54,6 +54,7 @@ flutter:
     - assets/symbols/2.0x/custom-icon.png
     - assets/symbols/3.0x/custom-icon.png
     - assets/style.json
+    - assets/sydney.png
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
