[Web][Example] Added web support for fills (#501)
* added web supoort for fills

* added capture for drag start

* changed translateFill to expect a delta vector

* removed somewhat redundant comment

* updated readme

Co-authored-by: Tobrun <tobrun.van.nuland@gmail.com>

--- a/mapbox_gl_web/pubspec.yaml
+++ b/mapbox_gl_web/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   mapbox_gl_dart: ^0.1.5
   image: ^2.1.12
 
+dependency_overrides:
+  mapbox_gl_platform_interface:
+    path: ../mapbox_gl_platform_interface
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
